Mavenized project.