@@ -16,21 +16,23 @@
 
 package com.clarionmedia.infinitum.aop.impl;
 
-import static org.hamcrest.CoreMatchers.is;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.times;
+
 import java.lang.reflect.Method;
 import java.util.PriorityQueue;
 import java.util.Queue;
+
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+
 import com.clarionmedia.infinitum.aop.JoinPoint;
 import com.clarionmedia.infinitum.aop.JoinPoint.AdviceLocation;
 import com.clarionmedia.infinitum.aop.Pointcut;
@@ -52,7 +54,7 @@ public class AdvisedDexMakerProxyTest {
 		mockPointcut = mock(Pointcut.class);
 		mockJoinPoint = mock(BasicJoinPoint.class);
 		mockProceedingJoinPoint = mock(ProceedingJoinPoint.class);
-		target = new Integer(42);
+		target = Integer.valueOf(42);
 	}
 	
 	@Test(expected = IllegalArgumentException.class)
@@ -80,7 +82,7 @@ public class AdvisedDexMakerProxyTest {
 
 		// Verify
 		assertNotNull("Proxy should have returned target value", result);
-		assertThat("Proxy should have returned target value", result, is(String.class));
+		assertEquals("Proxy should have returned target value", result.getClass(), String.class);
 		assertTrue("Proxy should have returned target value", result.equals("42"));
 
 	}
@@ -104,7 +106,7 @@ public class AdvisedDexMakerProxyTest {
 		// Verify
 		verify(mockJoinPoint, times(0)).invoke();
 		assertNotNull("Proxy should have returned target value", result);
-		assertThat("Proxy should have returned target value", result, is(String.class));
+		assertEquals("Proxy should have returned target value", result.getClass(), String.class);
 		assertTrue("Proxy should have returned target value", result.equals("42"));
 	}
 
@@ -127,7 +129,7 @@ public class AdvisedDexMakerProxyTest {
 		// Verify
 		verify(mockJoinPoint).invoke();
 		assertNotNull("Proxy should have returned target value", result);
-		assertThat("Proxy should have returned target value", result, is(String.class));
+		assertEquals("Proxy should have returned target value", result.getClass(), String.class);
 		assertTrue("Proxy should have returned target value", result.equals("42"));
 
 	}
@@ -150,7 +152,7 @@ public class AdvisedDexMakerProxyTest {
 		// Verify
 		verify(mockJoinPoint).invoke();
 		assertNotNull("Proxy should have returned target value", result);
-		assertThat("Proxy should have returned target value", result, is(String.class));
+		assertEquals("Proxy should have returned target value", result.getClass(), String.class);
 		assertTrue("Proxy should have returned target value", result.equals("42"));
 
 	}
@@ -174,7 +176,7 @@ public class AdvisedDexMakerProxyTest {
 		// Verify
 		verify(mockProceedingJoinPoint).invoke();
 		assertNotNull("Proxy should have returned target value", result);
-		assertThat("Proxy should have returned target value", result, is(String.class));
+		assertEquals("Proxy should have returned target value", result.getClass(), String.class);
 		assertTrue("Proxy should have returned target value", result.equals("42"));
 
 	}
